# cmake-template

./: .earthignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Earthfile  Makefile  README.md  conanfile.py  docker-compose.yml  entrypoint.sh  requirements.txt  run_vscode.cmd  run_vscode.ps1  vcpkg.json
app/: CMakeLists.txt  archived.cpp  file.cpp  main.cpp
archived/calculator/: CMakeLists.txt  Makefile  main.cpp
archived/opencv/: CMakeLists.txt  Makefile  main.cpp
src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
